...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cX0-lK-ee6">
                                <rect key="frame" x="20" y="260" width="560" height="43"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zRc-oN-Kad">
                                <rect key="frame" x="20" y="311" width="560" height="43"/>
                                <constraints>
...
                                    <constraint firstAttribute="height" constant="46" id="lKk-CH-fpD"/>
                                </constraints>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VfX-QR-3ae"/>
...
                                    <constraint firstAttribute="width" constant="322" id="ktc-qP-WEO"/>
                                </constraints>
                                <state key="normal" title="Create Account"/>
                                <connections>
                                    <segue destination="bsD-ip-mg7" kind="show" id="ypB-yZ-srU"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <state key="normal" title="I'm picking up food"/>
                                <connections>
                                    <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0TG-Be-dbS"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <state key="normal" title="I want food"/>
                                <connections>
                                    <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vpL-tw-cWg"/>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="10u-XQ-VeS">
                        <barButtonItem key="leftBarButtonItem" title="Settings" id="vQE-Iq-bWC">
                            <connections>
                                <segue destination="o8a-E2-DZA" kind="show" identifier="settings" id="1oD-X7-Zej"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="My orders" id="riJ-g2-bem">
                            <connections>
                                <segue destination="8Eh-wK-row" kind="show" id="YLk-kw-KBP"/>
...
                                    <constraint firstAttribute="width" constant="322" id="oZV-zs-T6c"/>
                                </constraints>
                                <state key="normal" title="Sign out"/>
                                <variation key="default">
                                    <mask key="constraints">
...
                                    <constraint firstAttribute="width" constant="322" id="r0u-K2-8vo"/>
                                </constraints>
                                <state key="normal" title="Next"/>
                                <variation key="default">
                                    <mask key="constraints">
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y77-MG-oAJ">
                                <rect key="frame" x="20" y="143" width="560" height="43"/>
                                <constraints>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gKJ-P8-IRU">
                                            <rect key="frame" x="15" y="11" width="34" height="20"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Add new food item..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UdD-aZ-siZ">
                                            <rect key="frame" x="15" y="0.0" width="570" height="43"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Orders" id="543-0v-ThO"/>
                    <connections>
                        <segue destination="3Yk-Wb-DTS" kind="show" identifier="myOrderSegue" id="q1H-lj-lx0"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Details" textAlignment="natural" minimumFontSize="16" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="XsA-KL-cT3" userLabel="details">
                                                    <rect key="frame" x="8" y="7" width="584" height="30"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
        <scene sceneID="olp-Z5-rsN">
            <objects>
                <tableViewController storyboardIdentifier="getThatOrder" title="Order Information" id="9ih-Hs-QGC" customClass="GetThatOrderTableViewController" customModule="Foodini" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="nNe-Ii-I3a">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
