...
    }
    
    func cellForRestaurantSection(tableView: UITableView, cellForRowAtIndexPath indexPath: NSIndexPath) -> UITableViewCell {
        let restaurantCell = tableView.dequeueReusableCellWithIdentifier("chooseRestaurantCell", forIndexPath: indexPath) as! ChooseRestaurantCell
        var restaurantName: String = order.restaurant.name

        if restaurantName == "Select restaurant..." {
            restaurantCell.name.textColor = UIColor.grayColor()
        } else {
            restaurantCell.name.textColor = UIColor.blackColor()
        }
        
        restaurantName.makeFirstLetterInStringUpperCase()
...
