...
            
            let alert = UIAlertController(title: "Pay", message: "Enter the order's dollar amount from the receipt.", preferredStyle: UIAlertControllerStyle.Alert)
            alert.addTextFieldWithConfigurationHandler({ (field: UITextField) in
                field.placeholder = "$##.##"
                field.keyboardType = .DecimalPad
            })
            alert.addAction(UIAlertAction(title: "Done", style: .Default, handler: { (action: UIAlertAction!) in
                sender.enabled = false
                self.order.payFor() { result in
                    if result {
                        // Order successfully paid for
                        self.manip.setDriverStyleFor(sender, toReflect: OrderState.PaidFor)
                    } else {
...
